fix(table): align date picker label

--- a/packages/react/src/components/Table/TableToolbar/_advanced-filter-flyout.scss
+++ b/packages/react/src/components/Table/TableToolbar/_advanced-filter-flyout.scss
@@ -17,8 +17,8 @@
     width: 100%;
   }
 
-  .#{$prefix}--date-picker-input__wrapper {
-    width: 100%;
+  .#{$prefix}--date-picker.#{$prefix}--date-picker--single {
+    text-align: initial;
   }
 
   .#{$prefix}--date-picker.#{$prefix}--date-picker--single .#{$prefix}--date-picker__input {
